# mra-kokkos

./: CMakeLists.txt  README.md
include/: kernels.h  tensorview.h  types.h  util.h
src/: kernels.cc  kernels.cu  mra_compress.cc
